--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -14,7 +13,7 @@
 	<artifactId>ftppublisher</artifactId>
 	<packaging>hpi</packaging>
 	<name>FTP publisher plugin</name>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<description>Upload artifacts and other resources to an ftp server.</description>
 	<url>http://wiki.hudson-ci.org/display/HUDSON/FTP-Publisher+Plugin</url>
 
@@ -60,9 +59,9 @@
 
 	<!-- This section required for releasing with new jenkins infrastructure when on older versions of parent pom -->
 	<scm>
-		<connection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/ftppublisher</connection>
-		<developerConnection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/ftppublisher</developerConnection>
-		<url>https://svn.jenkins-ci.org/trunk/hudson/plugins/ftppublisher</url>
+		<connection>scm:svn:https://svn.jenkins-ci.org/tags/ftppublisher-1.1</connection>
+		<developerConnection>scm:svn:https://svn.jenkins-ci.org/tags/ftppublisher-1.1</developerConnection>
+		<url>https://svn.jenkins-ci.org/tags/ftppublisher-1.1</url>
 	</scm>
 	
 </project>
