--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>ftppublisher</artifactId>
 	<packaging>hpi</packaging>
 	<name>FTP publisher plugin</name>
-	<version>1.1.3</version>
+	<version>1.2-SNAPSHOT</version>
 	<description>Upload artifacts and other resources to an ftp server.</description>
 	<url>http://wiki.hudson-ci.org/display/HUDSON/FTP-Publisher+Plugin</url>
 
@@ -66,9 +66,9 @@
 	<!-- This section required for releasing with new jenkins infrastructure 
 		when on older versions of parent pom -->
 	<scm>
-		<connection>scm:svn:https://svn.jenkins-ci.org/tags/ftppublisher-1.1.3</connection>
-		<developerConnection>scm:svn:https://svn.jenkins-ci.org/tags/ftppublisher-1.1.3</developerConnection>
-		<url>https://svn.jenkins-ci.org/tags/ftppublisher-1.1.3</url>
+		<connection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/ftppublisher</connection>
+		<developerConnection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/ftppublisher</developerConnection>
+		<url>https://svn.jenkins-ci.org/trunk/hudson/plugins/ftppublisher</url>
 	</scm>
 
 	<distributionManagement>
