--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.jvnet.hudson.plugins</groupId>
+		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.349</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>1.591</version>
 	</parent>
 
-	<groupId>org.jvnet.hudson.plugins</groupId>
+
 	<artifactId>ftppublisher</artifactId>
-	<packaging>hpi</packaging>
 	<name>FTP publisher plugin</name>
-	<version>1.3-SNAPSHOT</version>
 	<description>Upload artifacts and other resources to an ftp server.</description>
-	<url>http://wiki.hudson-ci.org/display/HUDSON/FTP-Publisher+Plugin</url>
+	<version>1.3-SNAPSHOT</version>
+	<packaging>hpi</packaging>
 
 	<developers>
 		<developer>
@@ -43,25 +41,7 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jvnet.hudson.tools</groupId>
-				<artifactId>maven-hpi-plugin</artifactId>
-				<version>1.42</version>
-				<extensions>true</extensions>
-				<configuration>
-					<compatibleSinceVersion>1.0</compatibleSinceVersion>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<goals>deploy</goals>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
 
 	<!-- This section required for releasing with new jenkins infrastructure 
 		when on older versions of parent pom -->
